Fixed linux crash, was exiting whilst running!
Former-commit-id: 5faf5a995531c2467b296cb4361d1ea56942734e

--- a/PopEngine.visualstudio/PopEngineLinux.props
+++ b/PopEngine.visualstudio/PopEngineLinux.props
@@ -13,7 +13,7 @@
     <ClCompile>
       <PreprocessorDefinitions>TARGET_LINUX</PreprocessorDefinitions>
       <CppLanguageStandard>c++17</CppLanguageStandard>
-      <CppAdditionalWarning>no-reorder;no-unused-but-set-variable;no-unused-value;no-nonnull-compare;no-address;no-conversion;no-sign-compare;%(CppAdditionalWarning)</CppAdditionalWarning>
+      <CppAdditionalWarning>no-reorder;no-unused-but-set-variable;no-unused-value;no-nonnull-compare;no-conversion;no-sign-compare;%(CppAdditionalWarning)</CppAdditionalWarning>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
