--- a/PopEngine.visualstudio/PopEngineLinux.props
+++ b/PopEngine.visualstudio/PopEngineLinux.props
@@ -3,7 +3,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>./src/SoyLib/src;../src/SoyLib/src</IncludePath>
+    <IncludePath>./src/SoyLib/src</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <Link>
