--- a/PopEngine.visualstudio/PopEngineLinux.vcxproj
+++ b/PopEngine.visualstudio/PopEngineLinux.vcxproj
@@ -89,6 +89,9 @@
     <ClCompile Include="..\src\SoyLib\src\SoyFourcc.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyImage.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyPixels.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyPng.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyProtocol.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyShellExecute.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyStream.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyString.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyThread.cpp" />
@@ -108,27 +111,91 @@
     <ClInclude Include="..\src\PopEngine.h" />
     <ClInclude Include="..\src\PopMain.h" />
     <ClInclude Include="..\src\SoyLib\src\Array.hpp" />
+    <ClInclude Include="..\src\SoyLib\src\AvfPixelBuffer.h" />
     <ClInclude Include="..\src\SoyLib\src\BufferArray.hpp" />
+    <ClInclude Include="..\src\SoyLib\src\chartype.hpp" />
+    <ClInclude Include="..\src\SoyLib\src\configure.hpp" />
     <ClInclude Include="..\src\SoyLib\src\HeapArray.hpp" />
     <ClInclude Include="..\src\SoyLib\src\MemHeap.hpp" />
+    <ClInclude Include="..\src\SoyLib\src\miniz\miniz.h" />
+    <ClInclude Include="..\src\SoyLib\src\ofCommandLineArgs.h" />
+    <ClInclude Include="..\src\SoyLib\src\ofLine.h" />
+    <ClInclude Include="..\src\SoyLib\src\ofPlane.h" />
+    <ClInclude Include="..\src\SoyLib\src\ofShape.h" />
     <ClInclude Include="..\src\SoyLib\src\RemoteArray.h" />
     <ClInclude Include="..\src\SoyLib\src\scope_ptr.h" />
+    <ClInclude Include="..\src\SoyLib\src\SortArray.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyApp.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyArray.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyAssert.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyAutoReleasePtr.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyAvf.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyBase64.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyCFString.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyCuda.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyDebug.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyDirectx.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyDirectx9.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyDirectxCompiler.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyEnum.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyExportManager.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyFilesystem.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyFourcc.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyGnm.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyGraphics.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyH264.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyHttp.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyHttpConnection.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyHttpServer.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyImage.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyJava.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyJson.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyMath.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyMedia.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyMediaFormat.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyMediaFoundation.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyMemFile.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyMetal.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyMulticast.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyOpenCl.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyOpengl.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyOpenglContext.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyPixels.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyPng.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyPool.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyProtocol.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyRef.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyRender.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyRingArray.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyRuntimeLibrary.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyScope.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyShader.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyShellExecute.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoySocket.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoySocketStream.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoySrt.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyState.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyState.hpp" />
     <ClInclude Include="..\src\SoyLib\src\SoyStream.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyStreamBuffer.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyString.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyThread.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyTime.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyTypes.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyTypes_Android.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyTypes_CoreFoundation.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyTypes_Linux.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyTypes_Lumin.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyTypes_Ps4.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyTypes_Windows.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyUniform.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyUnity.h" />
     <ClInclude Include="..\src\SoyLib\src\SoyVector.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyVideoDevice.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyWave.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyWebSocket.h" />
+    <ClInclude Include="..\src\SoyLib\src\SoyWindow.h" />
+    <ClInclude Include="..\src\SoyLib\src\stb\stb_image.h" />
     <ClInclude Include="..\src\TApiCommon.h" />
     <ClInclude Include="..\src\TApiEngine.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">true</ExcludedFromBuild>
