Fixed std::filesystem in linux (link to lib)
Former-commit-id: 775a2b3614179b2e3f0dd9038980dcb456e73965

--- a/PopEngine.visualstudio/PopEngineLinux.props
+++ b/PopEngine.visualstudio/PopEngineLinux.props
@@ -7,13 +7,13 @@
   </PropertyGroup>
   <ItemDefinitionGroup>
     <Link>
-      <LibraryDependencies>javascriptcoregtk-4.0</LibraryDependencies>
+      <LibraryDependencies>javascriptcoregtk-4.0;stdc++fs</LibraryDependencies>
       <AdditionalOptions>-pthread %(AdditionalOptions)</AdditionalOptions>
     </Link>
     <ClCompile>
       <PreprocessorDefinitions>TARGET_LINUX</PreprocessorDefinitions>
       <CppLanguageStandard>c++17</CppLanguageStandard>
-      <CppAdditionalWarning>no-reorder;no-unused-but-set-variable;no-unused-value;no-nonnull-compare;no-conversion;no-sign-compare;%(CppAdditionalWarning)</CppAdditionalWarning>
+      <CppAdditionalWarning>no-reorder;no-unused-but-set-variable;no-unused-value;no-nonnull-compare;no-conversion;no-sign-compare;no-address;%(CppAdditionalWarning)</CppAdditionalWarning>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
