--- a/PopEngine.visualstudio/PopEngineLinux.vcxproj
+++ b/PopEngine.visualstudio/PopEngineLinux.vcxproj
@@ -87,16 +87,21 @@
     <ClCompile Include="..\src\SoyLib\src\SoyDebug.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyFilesystem.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyFourcc.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyHttp.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyImage.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyPixels.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyPng.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyProtocol.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyRef.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyShellExecute.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoySocket.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyStream.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyString.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyThread.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyTime.cpp" />
     <ClCompile Include="..\src\SoyLib\src\SoyTypes.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyWebSocket.cpp" />
+    <ClCompile Include="..\src\SoyLib\src\SoyWindow.cpp" />
     <ClCompile Include="..\src\TApiCommon.cpp" />
     <ClCompile Include="..\src\TApiEngine.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">true</ExcludedFromBuild>
@@ -104,6 +109,9 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="..\src\TApiHttp.cpp" />
+    <ClCompile Include="..\src\TApiSocket.cpp" />
+    <ClCompile Include="..\src\TApiWebsocket.cpp" />
     <ClCompile Include="..\src\TBind.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -203,6 +211,9 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="..\src\TApiHttp.h" />
+    <ClInclude Include="..\src\TApiSocket.h" />
+    <ClInclude Include="..\src\TApiWebsocket.h" />
     <ClInclude Include="..\src\TBind.h" />
   </ItemGroup>
   <ItemGroup>
