Ignore linux build /bin file
Former-commit-id: 48dbd1c6b8e11ff3dea2846fa6cd0825f97d1e02

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ PopEngine.visualstudio/packages/
 PopEngine.visualstudio/.vs/PopEngine/v15/
 
 PopEngine.visualstudio/obj/ARM/
+
+PopEngine.visualstudio/bin/
