Added midi unit test to project
Former-commit-id: 57e276e9c7afa623d9418a02c0a71b47f2fadb48

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -511,6 +511,7 @@
     <None Include="..\UnitTest\LeapMotion\bootup.js" />
     <None Include="..\UnitTest\LeapMotion\Cube.frag.glsl" />
     <None Include="..\UnitTest\LeapMotion\Cube.vert.glsl" />
+    <None Include="..\UnitTest\Midi\bootup.js" />
     <None Include="..\UnitTest\OpencvArucoMarker\Blit.frag.glsl" />
     <None Include="..\UnitTest\OpencvArucoMarker\bootup.js" />
     <None Include="..\UnitTest\OpencvArucoMarker\Quad.vert.glsl" />
