Updated submodule UnitTest
Former-commit-id: 43a571e5a3fda060e6d4bbe29c4d742ca18a23e0

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "src/PopDepthToYuv"]
 	path = src/PopDepthToYuv
 	url = https://github.com/SoylentGraham/PopDepthToYuv.git
+[submodule "src/Android/v8"]
+	path = src/Android/v8
+	url = https://github.com/v8/v8.git
