Added readme to project
Former-commit-id: 74ade7b456daf7a48ed67751f4d5413e35aecd1a

--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -855,6 +855,7 @@
     <None Include="..\UnitTest\Midi\bootup.js">
       <Filter>UnitTest\Midi</Filter>
     </None>
+    <None Include="..\Readme.md" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\PopMain.cpp">
