Fixed arm64 build for jetson cross compiling
Former-commit-id: 98f1d5c73500bc0d6a5c51cdc76c5e6c8f327c51

--- a/.gitignore
+++ b/.gitignore
@@ -52,5 +52,7 @@ PopEngine.visualstudio/packages/
 PopEngine.visualstudio/.vs/PopEngine/v15/
 
 PopEngine.visualstudio/obj/ARM/
+PopEngine.visualstudio/obj/ARM64/
 
 PopEngine.visualstudio/bin/
+
