--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -287,6 +287,7 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master_JsCore|x64'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master_V8|x64'">true</DeploymentContent>
     </CustomBuild>
+    <None Include="..\PopEngine.Linux\Makefile" />
     <None Include="..\Readme.md" />
     <None Include="..\src\Libs\JavascriptCore\win64\CFLite.pdb" />
     <CustomBuild Include="..\src\Libs\JavascriptCore\win64\icudt63.dll">
