Makefile no longer needs an archType. Build dir now Build/Linux_arch. Fixed runtime loading of PopEngine now libPopEngine.so

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"type": "vgdb",
 			"request": "launch",
 			"name": "Debug vgdb",
-			"program": "./PopEngine.Linux/PopEngineTestApp",
+			"program": "Build/Linux_Linux/PopEngineTestApp",
 			"args": [],
 			"cwd": "${workspaceRoot}",
 			"useAbsoluteFilePaths":true,
@@ -18,8 +18,8 @@
 			"name": "Debug gdb",
 			"type": "gdb",
 			"request": "launch",
-			"target": "./PopEngine.Linux/PopEngineTestApp",
-			"program": "./PopEngine.Linux/PopEngineTestApp",
+			"target": "Build/Linux_Linux/PopEngineTestApp",
+			"program": "Build/Linux_Linux/PopEngineTestApp",
 			"cwd": "${workspaceRoot}",
 			"valuesFormatting": "parseText",
 			"printCalls": true,
