Assigned header to lib build, not test app

--- a/PopEngine.Linux/Makefile
+++ b/PopEngine.Linux/Makefile
@@ -115,12 +115,12 @@ $(OUT_HEADER): $(OUT_HEADER_SRC)
 	$(info Copying $(OUT_HEADER))
 	cp $(OUT_HEADER_SRC) $(OUT_HEADER)
 
-$(OUT_EXECUTABLE): $(TESTAPP_OBJECTS) $(OUT_LIBRARY) $(OUT_HEADER)
+$(OUT_EXECUTABLE): $(TESTAPP_OBJECTS) $(OUT_LIBRARY)
 	echo "Building test app $(OUT_EXECUTABLE)"
 	mkdir -p $(BUILD_DIR)
 	$(CC) $(TEST_APP_LINK_FLAGS) $(TESTAPP_OBJECTS) -o $@ -L$(BUILD_DIR) -l$(LIBRARY_NAME)
 
-$(OUT_LIBRARY): $(LIB_OBJECTS)
+$(OUT_LIBRARY): $(LIB_OBJECTS) $(OUT_HEADER)
 	echo "Building library $(OUT_LIBRARY)"
 	mkdir -p $(BUILD_DIR)
 	$(CC) $(LIB_LINK_FLAGS) -o $@ $(LIB_OBJECTS) $(LIBRARY_LINK_LIBS)
